--- a/16_自定义指令/自定义指令.html
+++ b/16_自定义指令/自定义指令.html
@@ -4,7 +4,7 @@
  * @Autor: Lai
  * @Date: 2023-08-04 10:40:34
  * @LastEditors: Lai
- * @LastEditTime: 2023-08-08 08:10:00
+ * @LastEditTime: 2023-08-08 08:19:40
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -71,7 +71,7 @@
             n: 1
         },
         directives: {
-            // big函数何时会被调用？1.指令与元素成功绑定时（一上来）。2.指令所在的模板被重新解析时。
+            // big函数何时会被调用？1.指令与元素成功绑定时（一上来）。2.指令所在的模板被重新解析时
             // element是真实DOM元素，binding是对象
             /* 'big-number'(element,binding){
                     // console.log('big')
